<resources>
    <string name="app_name">IT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник IT админа</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_up">Краткий справочник основных \nкоманд, запросов и операционных\nсистем Windows и *unix подобных.</string>
    <string name="large_unix">Unix</string>
    <string name="large_win">Windows</string>
    <string name="large_ubuntu">Ubuntu</string>
    <string name="large_winserver">Win сервер</string>
    <string name="large_tcpip">TCP/IP</string>
    <string name="large_rjudp">RJ-45/UDP-5E</string>
    <string name="title_activity_unix_console">Unix консоль</string>
    <string name="title_activity_win_console">Win консоль</string>
    <string name="title_activity_ubuntu_cmd">Ubuntu команды</string>
    <string name="title_activity_win_server">Windows сервер</string>
    <string name="title_activity_tcp__ip">TCP/IP</string>
    <string name="title_activity_rj__udp">RJ-45/UDP-5E</string>
    <string name="title_activity_unix_man_console">Команды и прикладные программы пользовательского уровня.</string>
    <string name="title_activity_unix_man_console_path2">Системные вызовы</string>
    <string name="unix_1">1. Команды и прикладные программы пользовательского уровня.</string>
    <string name="unix_2">2. Системные вызовы.</string>
    <string name="unix_3">3. Библиотечные вызовы.</string>
    <string name="unix_4">4. Специальные файлы /dev/*.</string>
    <string name="unix_5">5. Форматы файлов.</string>
    <string name="unix_6">6. Игры.</string>
    <string name="unix_7">7. Макропакеты и соглашения.</string>
    <string name="unix_8">8. Команды системного администрирования.</string>
    <string name="unix_9">9. Ядро.</string>
    <string name="unix_cmd_F1">FvwmAudio</string>
    <string name="unix_cmd_F2">FvwmAuto</string>
    <string name="unix_cmd_F3">FvwmBacker</string>
    <string name="unix_cmd_F4">FvwmBanner</string>
    <string name="unix_cmd_F5">FvwmCascade</string>
    <string name="unix_cmd_F6">FvwmConsole</string>
    <string name="unix_cmd_F7">FvwmCpp</string>
    <string name="unix_cmd_F8">FvwmDebug</string>
    <string name="unix_cmd_F9">FvwmForm</string>
    <string name="unix_cmd_F10">FvwmIconBox</string>
    <string name="unix_cmd_F11">FvwmSave</string>
    <string name="unix_cmd_F12">FvwmScript</string>
    <string name="unix_cmd_a">a2p</string>
    <string name="unix_cmd_a1">a2ps</string>
    <string name="unix_cmd_a2">adduser</string>
    <string name="unix_cmd_a3">adminuser</string>
    <string name="unix_cmd_a4">alsactl</string>
    <string name="unix_cmd_a5">apm</string>
    <string name="unix_cmd_a6">apmd</string>
    <string name="unix_cmd_a7">apropos</string>
    <string name="unix_cmd_a8">ar</string>
    <string name="unix_cmd_a9">arch</string>
    <string name="unix_cmd_a10">as</string>
    <string name="unix_cmd_a11">at batch</string>
    <string name="unix_cmd_a12">atq</string>
    <string name="unix_cmd_a13">atrm</string>
    <string name="unix_cmd_a14">audit2allow</string>
    <string name="unix_cmd_a15">awk</string>
    <string name="unix_cmd_b">baby</string>
    <string name="unix_cmd_b1">backup</string>
    <string name="unix_cmd_b2">basename</string>
    <string name="unix_cmd_b3">bash</string>
    <string name="unix_cmd_b4">bdftopcf</string>
    <string name="unix_cmd_b5">biff</string>
    <string name="unix_cmd_b6">biod</string>
    <string name="unix_cmd_b7">boot</string>
    <string name="unix_cmd_b8">bootparamd</string>
    <string name="unix_cmd_c">cat</string>
    <string name="unix_cmd_c1">cc</string>
    <string name="unix_cmd_c2">cdrecord</string>
    <string name="unix_cmd_c3">chage</string>
    <string name="unix_cmd_c4">chattr</string>
    <string name="unix_cmd_c5">chfn</string>
    <string name="unix_cmd_c6">chgrp</string>
    <string name="unix_cmd_c7">chmod</string>
    <string name="unix_cmd_c8">chown</string>
    <string name="unix_cmd_c9">chroot</string>
    <string name="unix_cmd_c10">chroot</string>
    <string name="unix_cmd_c11">chsh</string>
    <string name="unix_cmd_c12">cksum</string>
    <string name="unix_cmd_c13">cksum</string>
    <string name="unix_cmd_c14">clear</string>
    <string name="unix_cmd_c15">col</string>
    <string name="unix_cmd_c16">color.map</string>
    <string name="unix_cmd_c17">comm</string>
    <string name="unix_cmd_c18">compress, uncompress, zcat</string>
    <string name="unix_cmd_c19">consoletype</string>
    <string name="unix_cmd_c20">cp</string>
    <string name="unix_cmd_c21">cpio</string>
    <string name="unix_cmd_c22">cron</string>
    <string name="unix_cmd_c23">crontab</string>
    <string name="unix_cmd_c24">csplit</string>
    <string name="unix_cmd_c25">cut</string>
    <string name="unix_cmd_d">date</string>
    <string name="unix_cmd_d1">dcraw</string>
    <string name="unix_cmd_d2">dd</string>
    <string name="unix_cmd_d3">debc</string>
    <string name="unix_cmd_d4">debchange</string>
    <string name="unix_cmd_d5">debconf-apt-progress</string>
    <string name="unix_cmd_d6">debconf-communicate</string>
    <string name="unix_cmd_d7">debconf-copydb</string>
    <string name="unix_cmd_d8">debconf-escape</string>
    <string name="unix_cmd_d9">debconf-gettextize</string>
    <string name="unix_cmd_d10">debconf-set-selections</string>
    <string name="unix_cmd_d11">debconf-show</string>
    <string name="unix_cmd_d12">debconf-updatepo</string>
    <string name="unix_cmd_d13">debconf</string>
    <string name="unix_cmd_d14">deluser</string>
    <string name="unix_cmd_d15">df</string>
    <string name="unix_cmd_d16">dfmounts</string>
    <string name="unix_cmd_d17">dfmounts -F nfs</string>
    <string name="unix_cmd_d18">dfshares</string>
    <string name="unix_cmd_d19">dfshares для NFS</string>
    <string name="unix_cmd_d20">dhcpconfig</string>
    <string name="unix_cmd_d21">diff</string>
    <string name="unix_cmd_d22">ls, dir, vdir</string>
    <string name="unix_cmd_d23">dircolors</string>
    <string name="unix_cmd_d24">dirname</string>
    <string name="unix_cmd_d25">dispatch-conf</string>
    <string name="unix_cmd_d26">djview</string>
    <string name="unix_cmd_d27">dnsdomainname</string>
    <string name="unix_cmd_d28">dnsquery</string>
    <string name="unix_cmd_d29">doexec</string>
    <string name="unix_cmd_d30">domainname</string>
    <string name="unix_cmd_d31">dosemu</string>
    <string name="unix_cmd_d32">dosemu.bin</string>
    <string name="unix_cmd_d33">dpkg</string>
    <string name="unix_cmd_d34">du</string>
    <string name="unix_cmd_e">ebuild</string>
    <string name="unix_cmd_e1">ebump</string>
    <string name="unix_cmd_e2">echangelog</string>
    <string name="unix_cmd_e3">echo</string>
    <string name="unix_cmd_e4">eclean</string>
    <string name="unix_cmd_e5">ed</string>
    <string name="unix_cmd_e6">egencache</string>
    <string name="unix_cmd_e7">eix</string>
    <string name="unix_cmd_e8">eject</string>
    <string name="unix_cmd_e9">ekeyword</string>
    <string name="unix_cmd_e10">emaint</string>
    <string name="unix_cmd_e11">emerge</string>
    <string name="unix_cmd_e12">emergency_disk</string>
    <string name="unix_cmd_e13">emergency_rec</string>
    <string name="unix_cmd_e14">enalyze</string>
    <string name="unix_cmd_e15">env-update</string>
    <string name="unix_cmd_e16">env</string>
    <string name="unix_cmd_e17">epkginfo</string>
    <string name="unix_cmd_e18">equery</string>
    <string name="unix_cmd_e19">eread</string>
    <string name="unix_cmd_e20">eshowkw</string>
    <string name="unix_cmd_e21">etc-update</string>
    <string name="unix_cmd_e22">euse</string>
    <string name="unix_cmd_e23">eview</string>
    <string name="unix_cmd_e24">eviewcvs</string>
    <string name="unix_cmd_e25">evim</string>
    <string name="unix_cmd_e26">ex</string>
    <string name="unix_cmd_e27">expand</string>
    <string name="unix_cmd_e28">expiry</string>
    <string name="unix_cmd_e29">expr</string>
    <string name="unix_cmd_f">factor</string>
    <string name="unix_cmd_f1">false</string>
    <string name="unix_cmd_f2">fetchmail</string>
    <string name="unix_cmd_f3">fluxbox</string>
    <string name="unix_cmd_f4">fmt</string>
    <string name="unix_cmd_f5">fold</string>
    <string name="unix_cmd_f6">free</string>
    <string name="unix_cmd_f7">ftp</string>
    <string name="unix_cmd_f8">fuser</string>
    <string name="unix_cmd_f9">fvwm2</string>
    <string name="unix_cmd_f10">fvwm95</string>
    <string name="unix_cmd_g">gawk</string>
    <string name="unix_cmd_g1">gendiff</string>
    <string name="unix_cmd_g2">getent</string>
    <string name="unix_cmd_g3">ginstall</string>
    <string name="unix_cmd_g4">gliv</string>
    <string name="unix_cmd_g5">glsa-check</string>
    <string name="unix_cmd_g6">gpasswd</string>
    <string name="unix_cmd_g7">gpg</string>
    <string name="unix_cmd_g8">gpgv</string>
    <string name="unix_cmd_g9">gphoto</string>
    <string name="unix_cmd_g10">grep</string>
    <string name="unix_cmd_g11">grodvi</string>
    <string name="unix_cmd_g12">groff</string>
    <string name="unix_cmd_g13">groupadd</string>
    <string name="unix_cmd_g14">groupdel</string>
    <string name="unix_cmd_g15">groupmod</string>
    <string name="unix_cmd_g16">groups</string>
    <string name="unix_cmd_g17">gtklp</string>
    <string name="unix_cmd_g18">gtklpq</string>
    <string name="unix_cmd_g19">gunzip</string>
    <string name="unix_cmd_g20">gview</string>
    <string name="unix_cmd_g21">gvim</string>
    <string name="unix_cmd_g22">gvimdiff</string>
    <string name="unix_cmd_g23">gzexe</string>
    <string name="unix_cmd_g24">gzip</string>
    <string name="unix_cmd_h">head</string>
    <string name="unix_cmd_h1">hostid</string>
    <string name="unix_cmd_h2">hostname</string>
    <string name="unix_cmd_h3">htop</string>
    <string name="unix_cmd_i">iconv</string>
    <string name="unix_cmd_i1">id</string>
    <string name="unix_cmd_i2">idbuild</string>
    <string name="unix_cmd_i3">ifconfig</string>
    <string name="unix_cmd_i4">imlate</string>
    <string name="unix_cmd_i5">inetd</string>
    <string name="unix_cmd_i6">info</string>
    <string name="unix_cmd_i7">init</string>
    <string name="unix_cmd_i8">initlog</string>
    <string name="unix_cmd_i9">install</string>
    <string name="unix_cmd_i10">install</string>
    <string name="unix_cmd_i11">intro</string>
    <string name="unix_cmd_i12">ip</string>
    <string name="unix_cmd_i13">ipcalc</string>
    <string name="unix_cmd_i14">ipcclean</string>
    <string name="unix_cmd_j">jackd</string>
    <string name="unix_cmd_j1">joe</string>
    <string name="unix_cmd_j2">join</string>
    <string name="unix_cmd_k">kernelversion</string>
    <string name="unix_cmd_k1">kill</string>
    <string name="unix_cmd_k2">killall</string>
    <string name="unix_cmd_l">last</string>
    <string name="unix_cmd_l1">layman</string>
    <string name="unix_cmd_l2">ldapadd</string>
    <string name="unix_cmd_l3">ldapcompare</string>
    <string name="unix_cmd_l4">ldapdelete</string>
    <string name="unix_cmd_l5">ldapexop</string>
    <string name="unix_cmd_l6">ldapmodify</string>
    <string name="unix_cmd_l7">ldapmodrdn</string>
    <string name="unix_cmd_l8">ldappasswd</string>
    <string name="unix_cmd_l9">ldapsearch</string>
    <string name="unix_cmd_l10">ldapurl</string>
    <string name="unix_cmd_l11">ldapwhoami</string>
    <string name="unix_cmd_l12">ldd</string>
    <string name="unix_cmd_l13">link</string>
    <string name="unix_cmd_l14">ln</string>
    <string name="unix_cmd_l15">locale</string>
    <string name="unix_cmd_l16">localedef</string>
</resources>