<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UnixConsole"
    tools:showIn="@layout/activity_unix_console">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="1">
        <TextView
            android:id="@+id/unix_tv1"
            android:clickable="true"
            android:onClick="onClick_unix1"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/unix_1"/>
        <TextView
            android:textSize="12dp"
            android:text=""/>
        <TextView
            android:id="@+id/unix_tv2"
            android:clickable="true"
            android:onClick="onClick_unix2"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:text="@string/unix_2"/>
        <TextView
            android:textSize="12dp"
            android:text=""/>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/unix_3"/>
        <TextView
            android:textSize="12dp"
            android:text=""/>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/unix_4"/>
        <TextView
            android:textSize="12dp"
            android:text=""/>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/unix_5"/>
        <TextView
            android:textSize="12dp"
            android:text=""/>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/unix_6"/>
        <TextView
            android:textSize="12dp"
            android:text=""/>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/unix_7"/>
        <TextView
            android:textSize="12dp"
            android:text=""/>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/unix_8"/>
        <TextView
            android:textSize="12dp"
            android:text=""/>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:text="@string/unix_9"/>
    </TableLayout>


</android.support.v4.widget.NestedScrollView>